2015-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Improve caching of common absolute timezones.

2015-04-28  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSDateFormatter.m: Properly reinstall the user provided
	date format when we need to recreate the icu-based date formatter.

2015-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: If an exception occurs while performing a
	selector in another thread, catch it and cleanup (and if the
	caller is waiting, pass the exception back to it).

2015-04-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Fix comment syntax and use standard operator in
	test command.

	* configure: Regenerated.

2015-03-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h: Internal function to get OS thread ID
	* Source/NSThread.m: Report thread name and ID in description
	* Source/NSLog.m: Use new function for thread ID
	* configure.ac: Detect getaddrinfo and bsd thread id extensions
	* Headers/GNUstepBase/config.h.in: regenerate
	* configure: regenerate
	* Source/NSHost.m: Start of code to use getaddrinfo

2015-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m: Fix a bug leading to crashes on thread
	exit in cases where deallocation of something in the thread dictionary
	causes further use of the thread's autorelease pool (which has already
	been deallocated).

2015-03-10 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: Fix a DoS vulnerability discovered in the 
	Timsort algorithm. For information about the problem please refer to
	http://www.envisage-project.eu/proving-android-java-and-python-sorting
	-algorithm-is-broken-and-how-to-fix-it/

2015-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileHandle.m: ([-sslHandshakeEstablished:outgoing:])
	If we can't create a session, the handshake should fail rather
	than being retried.  Fix infinite loop establish session on closed
	handle.
